Refactored the createOrUpdateTeamParameters